# aer

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nginx.conf
.github/workflows/: rust-clippy.yml
src/: args.rs  files.rs  index.rs  lib.rs  main.rs  routes.rs  rreaction.rs  upload.rs  utils.rs
static/: index.html
