[package]
name = "rreaction_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.4.18", features = ["derive"] }
ignore = { version = "0.4.22", features = ["simd-accel"] }
lazy_static = "1.4.0"
