[package]
name = "aer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.4.1"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
ignore = { version = "0.4.22", features = ["simd-accel"] }
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
